chore: add sln and update csproj

--- a/csproj~/net.rs64.tex-trans-core/net.rs64.tex-trans-core.csproj
+++ b/csproj~/net.rs64.tex-trans-core/net.rs64.tex-trans-core.csproj
@@ -10,7 +10,7 @@
 
 
   <ItemGroup>
-    <Compile Include="../TexTransCore/**/*.cs"/>
+    <Compile Include="../../TexTransCore/**/*.cs"/>
   </ItemGroup>
 
 </Project>
