chore: add repository dispatch

--- a/.github/workflows/CreateTTCNewVersionAndRelease.yml
+++ b/.github/workflows/CreateTTCNewVersionAndRelease.yml
@@ -29,3 +29,14 @@ jobs:
     needs: [CreateZip, GetPackageJson]
     with:
       tag: ${{ inputs.tag }}
+
+  SendVpmRS64Net:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.VPM_REPO_TOKEN }}
+          repository: ReinaS-64892/vpm.rs64.net
+          event-type: add_new_version
+          client-payload: '{"repository": "TexTransCore", "tag": "${{ inputs.tag }}"}'
