--- a/.github/workflows/CreateTTCNewVersionAndRelease.yml
+++ b/.github/workflows/CreateTTCNewVersionAndRelease.yml
@@ -32,6 +32,7 @@ jobs:
 
   SendVpmRS64Net:
     runs-on: ubuntu-latest
+    needs: [CreateRelease]
     steps:
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v3
