--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -24,5 +24,5 @@ jobs:
         prerelease: ${{ contains(inputs.tag,'-') }}
         generate_release_notes: true
         files: |
-          tex-trans-core.zip
+          tex-trans-core-${{ inputs.tag }}.zip
           package.json
