--- a/.github/workflows/GetPackageJson.yml
+++ b/.github/workflows/GetPackageJson.yml
@@ -2,12 +2,12 @@ name: CreateZip
 on:
   workflow_call:
     inputs:
-      ref:
+      tag:
         type: string
         required: false
   workflow_dispatch:
     inputs:
-      ref:
+      tag:
         type: string
         required: false
 
@@ -18,7 +18,7 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-tags: true
-            ref: ${{ inputs.ref }}
+            ref: ${{ inputs.tag }}
 
         - uses: actions/upload-artifact@v4
           with:
